compiler/tests/fixtures/compile_errors/unexpected_return.fe
contract Foo:
    baz: map<u256, u256>

    pub def bar():
        return 1
